# src/modules/order/infrastructure/http/dto/update-order-status.dto.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsEnum } from 'class-validator';
+import { OrderStatus } from '../../../domain/order-status.enum';
+
+export class UpdateOrderStatusDto {
+  @ApiProperty({ enum: OrderStatus, example: OrderStatus.PAID })
+  @IsEnum(OrderStatus)
+  status!: OrderStatus;
+}
